fixed footer elements alignment

--- a/src/app/component/layout/components/footer/footer.component.scss
+++ b/src/app/component/layout/components/footer/footer.component.scss
@@ -44,6 +44,7 @@ $generalFont : 'Open Sans';
       .right-side {
         display: flex;
         align-items: center;
+        margin-bottom: 24px;
 
         .follow-us-text {
           margin-right: 16px;
